--- a/agile-frontend/WebContent/locales/misc-sources/elements.json
+++ b/agile-frontend/WebContent/locales/misc-sources/elements.json
@@ -1,31 +1,43 @@
 {"elements": {
-    "{{agile_lng_translate 'landingpage-builder' 'headers'}}":[
-    	{"url":"elements/header10.html","height":567, "thumbnail":"elements/images/thumbs/header10.png"},
-    	{"url":"elements/header5.html","height":694, "thumbnail":"elements/images/thumbs/header5.png"},
-    	{"url":"elements/header11.html","height":708, "thumbnail":"elements/images/thumbs/header11.png"},
-    	{"url":"elements/header1.html","height":481, "thumbnail":"elements/images/thumbs/header1.png"},
-    	{"url":"elements/header6.html","height":491, "thumbnail":"elements/images/thumbs/header6.png"},
-    	{"url":"elements/header2.html","height":498, "thumbnail":"elements/images/thumbs/header2.png"},
-    	{"url":"elements/header8.html","height":633, "thumbnail":"elements/images/thumbs/header8.png"},
-    	{"url":"elements/header9.html","height":633, "thumbnail":"elements/images/thumbs/header9.png"},
-    	{"url":"elements/header3.html","height":959, "thumbnail":"elements/images/thumbs/header3.png"},
-    	{"url":"elements/header4.html","height":660, "thumbnail":"elements/images/thumbs/header4.png"},
-    	{"url":"elements/header7.html","height":715, "thumbnail":"elements/images/thumbs/header7.png"}
+    "{{agile_lng_translate 'landingpage-builder' 'header'}}":[
+    	{"url":"elements/header11.html","height":567, "thumbnail":"elements/images/thumbs/header10.png"},
+    	{"url":"elements/header5.html","height":694, "thumbnail":"elements/images/thumbs/header5.png"}
+    	
     ],
-    "{{agile_lng_translate 'landingpage-builder' 'content-sections'}}":[
-    	{"url":"elements/content_section1.html","height":481, "thumbnail":"elements/images/thumbs/content_section1.png"},
-    	{"url":"elements/content_section2.html","height":520, "thumbnail":"elements/images/thumbs/content_section2.png"},
+    "{{agile_lng_translate 'landingpage-builder' 'content'}}":[
+        {"url":"elements/header1.html","height":481, "thumbnail":"elements/images/thumbs/header1.png"},
+        {"url":"elements/header2.html","height":498, "thumbnail":"elements/images/thumbs/header2.png"},
+        {"url":"elements/header3.html","height":500, "thumbnail":"elements/images/thumbs/header3.png"},
+        {"url":"elements/header4.html","height":500, "thumbnail":"elements/images/thumbs/header4.png"},
+    	{"url":"elements/content_section12.html","height":376, "thumbnail":"elements/images/thumbs/content_section11.png"},
     	{"url":"elements/content_section3.html","height":774, "thumbnail":"elements/images/thumbs/content_section3.png"},
     	{"url":"elements/content_section4.html","height":331, "thumbnail":"elements/images/thumbs/content_section4.png"},
     	{"url":"elements/content_section5.html","height":846, "thumbnail":"elements/images/thumbs/content_section5.png"},
     	{"url":"elements/content_section6.html","height":344, "thumbnail":"elements/images/thumbs/content_section6.png"},
     	{"url":"elements/content_section7.html","height":344, "thumbnail":"elements/images/thumbs/content_section7.png"},
-    	{"url":"elements/content_section8.html","height":725, "thumbnail":"elements/images/thumbs/content_section8.png"},
-    	{"url":"elements/content_section9.html","height":567, "thumbnail":"elements/images/thumbs/content_section9.png"},
+    	{"url":"elements/content_section8.html","height":725, "thumbnail":"elements/images/thumbs/content_section8.png"},    	
     	{"url":"elements/content_section10.html","height":376, "thumbnail":"elements/images/thumbs/content_section10.png"},
     	{"url":"elements/content_section11.html","height":376, "thumbnail":"elements/images/thumbs/content_section11.png"}
     ],
-    "{{agile_lng_translate 'landingpage-builder' 'dividers'}}":[
+    "{{agile_lng_translate 'landingpage-builder' 'contents-media'}}":[
+        {"url":"elements/content_section1.html","height":481, "thumbnail":"elements/images/thumbs/content_section1.png"},
+        {"url":"elements/content_section2.html","height":520, "thumbnail":"elements/images/thumbs/content_section2.png"},
+        {"url":"elements/content_section9.html","height":567, "thumbnail":"elements/images/thumbs/content_section9.png"}
+    ],
+    "{{agile_lng_translate 'landingpage-builder' 'layout'}}":[],
+    "{{agile_lng_translate 'landingpage-builder' 'form'}}":[
+        {"url":"elements/agileform1.html","height":700, "thumbnail":"elements/images/thumbs/agileform1.png"},
+        {"url":"elements/agileform2.html","height":700, "thumbnail":"elements/images/thumbs/agileform2.png"},
+        {"url":"elements/agileform3.html","height":700, "thumbnail":"elements/images/thumbs/agileform3.png"},     
+        {"url":"elements/agileform4.html","height":700, "thumbnail":"elements/images/thumbs/agileform4.png"},
+        {"url":"elements/agileform5.html","height":700, "thumbnail":"elements/images/thumbs/agileform5.png"}
+    ],
+    "{{agile_lng_translate 'landingpage-builder' 'contents-slider'}}":[
+        {"url":"elements/header7.html","height":400, "thumbnail":"elements/images/thumbs/header7.png"},
+        {"url":"elements/header6.html","height":400, "thumbnail":"elements/images/thumbs/header6.png"},
+        {"url":"elements/header9.html","height":400, "thumbnail":"elements/images/thumbs/header9.png"}        
+    ],    
+    "{{agile_lng_translate 'landingpage-builder' 'divider'}}":[
     	{"url":"elements/divider1.html","height":163, "thumbnail":"elements/images/thumbs/divider1.png"},
     	{"url":"elements/divider2.html","height":163, "thumbnail":"elements/images/thumbs/divider2.png"},
     	{"url":"elements/divider3.html","height":163, "thumbnail":"elements/images/thumbs/divider3.png"},
@@ -34,7 +46,7 @@
     	{"url":"elements/divider6.html","height":60, "thumbnail":"elements/images/thumbs/divider6.png"},
     	{"url":"elements/divider7.html","height":120, "thumbnail":"elements/images/thumbs/divider7.png"}
     ],
-    "{{agile_lng_translate 'landingpage-builder' 'portfolios'}}":[
+    "{{agile_lng_translate 'landingpage-builder' 'portfolio'}}":[
     	{"url":"elements/portfolio1.html","height":701, "thumbnail":"elements/images/thumbs/portfolio1.png"},
     	{"url":"elements/portfolio2.html","height":799, "thumbnail":"elements/images/thumbs/portfolio2.png"},
     	{"url":"elements/portfolio3.html","height":516, "thumbnail":"elements/images/thumbs/portfolio3.png"}
@@ -44,22 +56,15 @@
     	{"url":"elements/team2.html","height":810, "thumbnail":"elements/images/thumbs/team2.png"},
         {"url":"elements/team3.html","height":752, "thumbnail":"elements/images/thumbs/team3.png"}
     ],
-    "{{agile_lng_translate 'landingpage-builder' 'pricing-tables'}}":[
+    "{{agile_lng_translate 'landingpage-builder' 'pricing-table'}}":[
     	{"url":"elements/pricing_table1.html","height":628, "thumbnail":"elements/images/thumbs/pricing_table1.png"},
     	{"url":"elements/pricing_table2.html","height":750, "thumbnail":"elements/images/thumbs/pricing_table2.png"},
     	{"url":"elements/pricing_table3.html","height":721, "thumbnail":"elements/images/thumbs/pricing_table3.png"}
-    ],
-    "{{agile_lng_translate 'landingpage-builder' 'forms'}}":[
-        {"url":"elements/agileform1.html","height":700, "thumbnail":"elements/images/thumbs/agileform1.png"},
-        {"url":"elements/agileform2.html","height":700, "thumbnail":"elements/images/thumbs/agileform2.png"},
-        {"url":"elements/agileform3.html","height":700, "thumbnail":"elements/images/thumbs/agileform3.png"},     
-        {"url":"elements/agileform4.html","height":700, "thumbnail":"elements/images/thumbs/agileform4.png"},
-        {"url":"elements/agileform5.html","height":700, "thumbnail":"elements/images/thumbs/agileform5.png"}
-    ],
+    ],    
     "{{agile_lng_translate 'other' 'knowledge-base'}}":[
         {"url":"elements/knowledge-base.html","height":294, "thumbnail":"elements/images/thumbs/knowledge-base.png"}
     ],
-    "{{agile_lng_translate 'landingpage-builder' 'footers'}}":[
+    "{{agile_lng_translate 'landingpage-builder' 'footer'}}":[
     	{"url":"elements/footer1.html","height":294, "thumbnail":"elements/images/thumbs/footer1.png"},
     	{"url":"elements/footer2.html","height":107, "thumbnail":"elements/images/thumbs/footer2.png"},
     	{"url":"elements/footer3.html","height":260, "thumbnail":"elements/images/thumbs/footer3.png"}
