--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5988,3 +5988,4 @@ widgets.knowlarity-content,Integrated Knowlarity SuperReceptionist into AgileCRM
 widgets.knowlarity-displayName,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-name,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-cancel,Cancel,,,,,,,,,,,,,
+emailbuilder.name-your-template,Name your template,
