--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5989,3 +5989,4 @@ widgets.knowlarity-displayName,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-name,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-cancel,Cancel,,,,,,,,,,,,,
 emailbuilder.name-your-template,Name your template,
+prefs-email-templates.enter-email-subject,Enter subject,
