android calling issues fixed

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5988,5 +5988,9 @@ widgets.knowlarity-content,Integrated Knowlarity SuperReceptionist into AgileCRM
 widgets.knowlarity-displayName,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-name,Knowlairty,,,,,,,,,,,,,
 widgets.knowlarity-cancel,Cancel,,,,,,,,,,,,,
-emailbuilder.name-your-template,Name your template,
-prefs-email-templates.enter-email-subject,Enter subject,
+emailbuilder.name-your-template,Name your template,,,,,,,,,,,,,
+prefs-email-templates.enter-email-subject,Enter subject,,,,,,,,,,,,,
+widgets.android-content,Make Outbound calls through your own mobile using Agile CRM mobile app.,,,,,,,,,,,,,
+widgets.android-displayName,Android,,,,,,,,,,,,,
+widgets.android-name,Android,,,,,,,,,,,,,
+widgets.android-cancel,Cancel,,,,,,,,,,,,,
