Added all options in office365 folder list

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6011,3 +6011,4 @@ calendar.proper-bussiness-hours,Please select proper business hours.,
 plan-and-upgrade.regular-content-1,Popular option for growing businesses looking for sales&#44; marketing automation & service.,
 plan-and-upgrade.enterprise-content-1,Best choice for businesses trying to scale&#44; with process-centric sales&#44; marketing automation & service.,
 calendar.keep-one-meeting,Please keep at least one meeting
+prefs-email.office365-folders-selection-content,Select either All Mail folder or any 3 folders of your choice.,,,,,,,,,,,,,
