--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5994,3 +5994,4 @@ widgets.android-content,Make Outbound calls through your own mobile using Agile 
 widgets.android-displayName,Android,,,,,,,,,,,,,
 widgets.android-name,Android,,,,,,,,,,,,,
 widgets.android-cancel,Cancel,,,,,,,,,,,,,
+other.message-new,Message,Mensaje,,,,,,,,,,,,
