updated to fix issues in voicemail widget

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -964,7 +964,7 @@ contacts-view.import-upto-10&#44,000-deals-from-a-CSV-file,Import upto 10&#44,00
 Help-content.and-receive-them-periodicallly,and receive them periodically via email.,y recibir periódicamente por correo electrónico.,,,,,,,,,,,,
 admin-settings-deals.milestone-with-this-name-exists,Milestone with this name already exists.,Ya existe un hito con este nombre,,,,,,,,,,,,
 campaigns.you-do-not-have-any-campaigns-currently,You do not have any Campaigns currently.,No tienes ninguna Campaña actualmente.,,,,,,,,,,,,
-calls.voicemail-uploaded,Sorry! Voice file not uploaded properly.,¡Lo siento! archivo de voz no ha subido correctamente.,,,,,,,,,,,,
+calls.voicemail-uploaded,Sorry! Voice mail file was not uploaded.,¡Lo siento! archivo de voz no ha subido correctamente.,,,,,,,,,,,,
 section.delete-confirm,Are you sure&#44, you want to delete section,¿Seguro&#44, que quiere eliminar la sección,,,,,,,,,,
 article.save-as-draft,Do you want to save the article as draft,¿Quieres guardar el artículo como borrador,,,,,,,,,,,,
 article.delete-confirm,Are you sure&#44, you want to delete article,¿Seguro&#44, usted quiere suprimir el artículo,,,,,,,,,,
@@ -6004,3 +6004,4 @@ tickets.knowledgebase_categorylist,Categories List,, ,,,,,,,,,,,
 tickets.knowledgebase_sectionlist,Sections List,,,,,,,,,,,,,
 tickets.knowledgebase_articlelist,Articles List,,,,,,,,,,,,,
 other.manage,Manage,,,,,,,,,,,,,
+calls.voicemail-uploaded,Sorry! Voice mail file was not uploaded.,,,,,,,,,,,,,
