updated for twilio conference issues

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5969,9 +5969,9 @@ widgets.do-not-have-an-ozonetel-account,Don't have an Ozonetel account?,,,,,,,,,
 widgets.agent-no,agent phone number,,,,,,,,,,,,,
 widgets.ozonetel-make-call,Sorry! unable to make a call to this number,,,,,,,,,,,,,
 widgets.ozonetel-url-content,Please configure below url in ozonetel dash board against to the specified kookoo number to notify incoming calls,,,,,,,,,,,,,
-landingpage-builder.text-to-display,Text to display:,
-landingpage-builder.open-in-new-tab,Open in new tab,
-landingpage-builder.validate-video-url,Please enter a valid video url,
-landingpage-builder.choose-a-block-link,Choose a block link,,,,,,,,,,,,,,,
-deal-view.selected-deals,Selected Deals,
-
+landingpage-builder.text-to-display,Text to display:,,,,,,,,,,,,,
+landingpage-builder.open-in-new-tab,Open in new tab,,,,,,,,,,,,,
+landingpage-builder.validate-video-url,Please enter a valid video url,,,,,,,,,,,,,
+landingpage-builder.choose-a-block-link,Choose a block link,,,,,,,,,,,,,
+deal-view.selected-deals,Selected Deals,,,,,,,,,,,,,
+twill.max-participants,Cannot add another number to the conference call because the maximum participants limit is reached.,,,,,,,,,,,,,
