one value added to csv

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6007,4 +6007,6 @@ calendar.meeting-duplicate-hours,Meetings with same duration are not allowed.
 calendar.meeting-duration-limit,We only support meeting duration upto a day (1440 Mins).
 calendar.meeting-proper-duration,Minutes should be greater zero and only integers.
 calendar.meeting-fields-empty,Meeting types should not be empty.
+calendar.proper-bussiness-hours,Please select proper business hours.
+
 
