one value added in csv

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6010,3 +6010,4 @@ calendar.meeting-fields-empty,Meeting types should not be empty.,
 calendar.proper-bussiness-hours,Please select proper business hours.,
 plan-and-upgrade.regular-content-1,Popular option for growing businesses looking for sales&#44; marketing automation & service.,
 plan-and-upgrade.enterprise-content-1,Best choice for businesses trying to scale&#44; with process-centric sales&#44; marketing automation & service.,
+calendar.keep-one-meeting,Please keep at least one meeting
