updated keys for twiliocall conference and vmdrops

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5994,21 +5994,24 @@ widgets.android-content,Make Outbound calls through your own mobile using Agile 
 widgets.android-displayName,Android,,,,,,,,,,,,,
 widgets.android-name,Android,,,,,,,,,,,,,
 widgets.android-cancel,Cancel,,,,,,,,,,,,,
-tickets.sort_Requester,Requester,,
-tickets.acl_feedback,Feedback,,
-tickets.acl_knowledgebase,Knowledge Base,,
-tickets.acl_knowledgebase_text,Enable access to Knowledge Base,,
-tickets.acl_feedback_text,Enable access to Feedback Dashboard,,
-tickets.acl_helpdesk_text,Enable access to Tickets and Help Desk,,
-tickets.knowledgebase_categorylist,Categories List,, 
-tickets.knowledgebase_sectionlist,Sections List,,
-tickets.knowledgebase_articlelist,Articles List,,
-calendar.meeting-duplicate-hours,Meetings with same duration are not allowed.,
-calendar.meeting-duration-limit,We only support meeting duration upto a day (1440 Mins).,
-calendar.meeting-proper-duration,Minutes should be greater zero and only integers.,
-calendar.meeting-fields-empty,Meeting types should not be empty.,
-calendar.proper-bussiness-hours,Please select proper business hours.,
-plan-and-upgrade.regular-content-1,Popular option for growing businesses looking for sales&#44; marketing automation & service.,
-plan-and-upgrade.enterprise-content-1,Best choice for businesses trying to scale&#44; with process-centric sales&#44; marketing automation & service.,
-calendar.keep-one-meeting,Please keep at least one meeting
+tickets.sort_Requester,Requester,,,,,,,,,,,,,
+tickets.acl_feedback,Feedback,,,,,,,,,,,,,
+tickets.acl_knowledgebase,Knowledge Base,,,,,,,,,,,,,
+tickets.acl_knowledgebase_text,Enable access to Knowledge Base,,,,,,,,,,,,,
+tickets.acl_feedback_text,Enable access to Feedback Dashboard,,,,,,,,,,,,,
+tickets.acl_helpdesk_text,Enable access to Tickets and Help Desk,,,,,,,,,,,,,
+tickets.knowledgebase_categorylist,Categories List,, ,,,,,,,,,,,
+tickets.knowledgebase_sectionlist,Sections List,,,,,,,,,,,,,
+tickets.knowledgebase_articlelist,Articles List,,,,,,,,,,,,,
+calendar.meeting-duplicate-hours,Meetings with same duration are not allowed.,,,,,,,,,,,,,
+calendar.meeting-duration-limit,We only support meeting duration upto a day (1440 Mins).,,,,,,,,,,,,,
+calendar.meeting-proper-duration,Minutes should be greater zero and only integers.,,,,,,,,,,,,,
+calendar.meeting-fields-empty,Meeting types should not be empty.,,,,,,,,,,,,,
+calendar.proper-bussiness-hours,Please select proper business hours.,,,,,,,,,,,,,
+plan-and-upgrade.regular-content-1,Popular option for growing businesses looking for sales&#44; marketing automation & service.,,,,,,,,,,,,,
+plan-and-upgrade.enterprise-content-1,Best choice for businesses trying to scale&#44; with process-centric sales&#44; marketing automation & service.,,,,,,,,,,,,,
+calendar.keep-one-meeting,Please keep at least one meeting,,,,,,,,,,,,,
 prefs-email.office365-folders-selection-content,Select either All Mail folder or any 3 folders of your choice.,,,,,,,,,,,,,
+twill.max-participants,Cannot add another number to the conference call because the maximum participants limit is reached.,,,,,,,,,,,,,
+other.manage,Manage,,,,,,,,,,,,,
+calls.voicemail-uploaded,Sorry! Voice mail file was not uploaded.,,,,,,,,,,,,,
