added vmdrops content key

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6005,3 +6005,4 @@ tickets.knowledgebase_sectionlist,Sections List,,,,,,,,,,,,,
 tickets.knowledgebase_articlelist,Articles List,,,,,,,,,,,,,
 other.manage,Manage,,,,,,,,,,,,,
 calls.voicemail-uploaded,Sorry! Voice mail file was not uploaded.,,,,,,,,,,,,,
+widgets.VMdrops-content,Import and manage voicemail drops easily,,,,,,,,,,,,,
