text for blocks in lp

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5528,15 +5528,15 @@ landingpage-builder.page-name,Enter a name to the page,Introduzca un nombre para
 landingpage-builder.site-preview,Site Preview,Vista previa del sitio,,,,,,,,,,,,
 landingpage-builder.preview-saved-info,Please note that the preview will always show your latest saved version, changes which haven't been saved yet will not be visible in the preview.,Tenga en cuenta que la vista previa siempre mostrará su última versión guardada, cambios que no se han guardado aún no serán visibles en la vista previa .,,,,,,,,,,
 landingpage-builder.preview-changes,Preview Changes,Los cambios de previsualización,,,,,,,,,,,,
-landingpage-builder.headers,Headers,Encabezados,,,,,,,,,,,,
+landingpage-builder.header,Header,Encabezados,,,,,,,,,,,,
 landingpage-builder.save-now,Save now,Guardar ahora,,,,,,,,,,,,
-landingpage-builder.content-sections,Content Sections,Las secciones de contenido,,,,,,,,,,,,
-landingpage-builder.dividers,Dividers,Divisores,,,,,,,,,,,,
-landingpage-builder.portfolios,Portfolios,Carteras,,,,,,,,,,,,
-landingpage-builder.team,Team,Equipo,,,,,,,,,,,,
-landingpage-builder.pricing-tables,Pricing Tables,Las tablas de precios,,,,,,,,,,,,
-landingpage-builder.footers,Footers,Pies de página,,,,,,,,,,,,
-landingpage-builder.forms,Forms,Formas,,,,,,,,,,,,
+landingpage-builder.content,Content,,,,,,,,,,,,,
+landingpage-builder.divider,Divider,,,,,,,,,,,,,
+landingpage-builder.portfolio,Portfolio,,,,,,,,,,,,,
+landingpage-builder.team,Team,,,,,,,,,,,,,
+landingpage-builder.pricing-table,Pricing Table,,,,,,,,,,,,,
+landingpage-builder.footer,Footer,,,,,,,,,,,,,
+landingpage-builder.form,Form,,,,,,,,,,,,,
 landingpage-builder.create-copy,Create a Copy,Crear una copia,,,,,,,,,,,,
 landingpage-builder.saved-successfully,Landing page have been saved successfully,La página de destino ha sido guardado con éxito,,,,,,,,,,,,
 landingpage-builder.publish-title,You can publish your page with a custom domain.,Puede publicar su página con un dominio personalizado .,,,,,,,,,,,,
@@ -6016,3 +6016,5 @@ twill.max-participants,Cannot add another number to the conference call because 
 other.manage,Manage,,,,,,,,,,,,,
 calls.voicemail-uploaded,Sorry! Voice mail file was not uploaded.,,,,,,,,,,,,,
 widgets.VMdrops-content,Import and manage voicemail drops easily,,,,,,,,,,,,,
+landingpage-builder.layout,Layout,,,,,,,,,,
+landingpage-builder.contents-slider,Slider,,,,,,,,,,
