free plan downgrade UI
Conflicts:
	agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
	agile-frontend/WebContent/locales/csv/i18n.csv

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6003,4 +6003,14 @@ tickets.acl_helpdesk_text,Enable access to Tickets and Help Desk,,
 tickets.knowledgebase_categorylist,Categories List,, 
 tickets.knowledgebase_sectionlist,Sections List,,
 tickets.knowledgebase_articlelist,Articles List,,
-
+calendar.meeting-duplicate-hours,Meetings with same duration are not allowed.,
+calendar.meeting-duration-limit,We only support meeting duration upto a day (1440 Mins).,
+calendar.meeting-proper-duration,Minutes should be greater zero and only integers.,
+calendar.meeting-fields-empty,Meeting types should not be empty.,
+calendar.proper-bussiness-hours,Please select proper business hours.,
+plan-and-upgrade.regular-content-1,Popular option for growing businesses looking for sales&#44; marketing automation & service.,
+plan-and-upgrade.enterprise-content-1,Best choice for businesses trying to scale&#44; with process-centric sales&#44; marketing automation & service.,
+calendar.keep-one-meeting,Please keep at least one meeting
+help.free-plan,Free Plan,
+help.free-plan-desc,Choose our free plan to continue with Agile. Check the plan limits before proceeding.,
+help.downgrade,Downgrade,
