tinymce editor same as balkan done

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6053,3 +6053,4 @@ widgets.run-as-admin-in-windows,*In Windows-Run jar in Administrator mode,,,,,,,
 help.free-plan,Free Plan,
 help.free-plan-desc,Choose our free plan to continue with Agile. Check the plan limits before proceeding.,
 help.downgrade,Downgrade,
+other.write-here,Write here,
