--- a/agile-frontend/WebContent/locales/misc-sources/email-builder.json
+++ b/agile-frontend/WebContent/locales/misc-sources/email-builder.json
@@ -67,6 +67,5 @@
  	"alternate-text": "{{agile_lng_translate 'builder' 'alternate-text'}}",
  	"link-to-web-link": "{{agile_lng_translate 'builder' 'link-to-web-link'}}",
  	"body": "{{agile_lng_translate 'builder' 'body'}}",
- 	"merge-fields": {{agile_lng_translate "contact-view" "merge-fields"}},
- 	"select": "{{agile_lng_translate 'deal-view' 'select'}}",
+ 	"select": "{{agile_lng_translate 'deal-view' 'select'}}"
 }
