--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -1775,7 +1775,7 @@ other.fill-from-template,- Fill from template -,#-Llenar de plantilla-,,,,,,,,,,
 Plan-and-upgrade.which-does-not-support,which does not support,que no permite la,,,,,,,,,,,,
 contact-details.you-have-no-emails-for,You have no emails for,No tiene mensajes de correo electrónico para,,,,,,,,,,,,
 countries.BA,Bosnia and Herzegovina,Bosnia and Herzegovina,,,,,,,,,,,,
-twill.select-twilio-number,Select a User Numbers,Seleccione un número de Twilio,,,,,,,,,,,,
+twill.select-twilio-number,Select a Inbound Number,Seleccione un número de Twilio,,,,,,,,,,,,
 countries.LY,Libyan Arab Jamahiriya,Libia,,,,,,,,,,,,
 report-view.call-report-time-based,Call Report-Time Based,Reporte de llamadas - basado en tiempo,,,,,,,,,,,,
 billing.not-enough-emails,Not Enough Emails Left,Los correos electrónicos no lo suficiente izquierda,,,,,,,,,,,,
