--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6070,4 +6070,4 @@ document.created,Created,,,,,,,,,,,,,
 document.document-list-templates,Templates,,,,,,,,,,,,,
 document.local-drive,Local Drive,,,,,,,,,,,,,
 documents.newedocument,New eDocument,,,,,,,,,,,,,
-document.preview-edocument,Preview eDocument ,,,,,,,,,,,,,
+documents.preview-edocument,Preview eDocument ,,,,,,,,,,,,,
