downgrade limit message changed

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6071,3 +6071,5 @@ document.document-list-templates,Templates,,,,,,,,,,,,,
 document.local-drive,Local Drive,,,,,,,,,,,,,
 documents.newedocument,New eDocument,,,,,,,,,,,,,
 documents.preview-edocument,Preview eDocument ,,,,,,,,,,,,,
+Plan-and-upgrade.contacts-or-companies,Contacts/Companies,
+Plan-and-upgrade.contacts-or-companies-limit-msg,Contacts/Companies with your current plan and are trying to subscribe with,,,,,,,,,,,,,
