updated to show linkedin widget in contact details page

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5986,3 +5986,5 @@ contacts-view.merge-records,Merge Records,,,,,,,,,,,,,
 contacts-view.merge-records-desc,Selected data will be merged into a master record. Do you want to proceed?,,,,,,,,,,,,,
 widgets.login-to-linkedin,Login to,,,,,,,,,,,,,
 widgets.linkedin-info-login,to show search results and profiles in your linkedin widget,,,,,,,,,,,,,
+widgets.linkedin-browser-info,Browser not supported. Please use or install chrome browser to enable linkedin widget,,,,,,,,,,,,,
+widgets.install-plugin,AgileCRM linkedin plugin not installed. Please install the plugin to enable linkedin widget,,,,,,,,,,,,,
