provided message after linkedin sync

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -5988,3 +5988,4 @@ widgets.login-to-linkedin,Login to,,,,,,,,,,,,,
 widgets.linkedin-info-login,to show search results and profiles in your linkedin widget,,,,,,,,,,,,,
 widgets.linkedin-browser-info,Browser not supported. Please use or install chrome browser to enable linkedin widget,,,,,,,,,,,,,
 widgets.install-plugin,AgileCRM linkedin plugin not installed. Please install the plugin to enable linkedin widget,,,,,,,,,,,,,
+widgets.linkedin-data-sync-success,Linkedin data synced successfully,,,,,,,,,,,,,
