--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6072,4 +6072,5 @@ document.local-drive,Local Drive,,,,,,,,,,,,,
 documents.newedocument,New eDocument,,,,,,,,,,,,,
 documents.preview-edocument,Preview eDocument ,,,,,,,,,,,,,
 Plan-and-upgrade.contacts-or-companies,Contacts/Companies,
+campaign.reputation-alert,Due to low on Email reputation&#44; You can not send more than 1000 emails per day from Agile CRM. Please clean up your contact list.,,,
 Plan-and-upgrade.contacts-or-companies-limit-msg,Contacts/Companies with your current plan and are trying to subscribe with,,,,,,,,,,,,,
