lp new block text

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6073,4 +6073,9 @@ documents.newedocument,New eDocument,,,,,,,,,,,,,
 documents.preview-edocument,Preview eDocument ,,,,,,,,,,,,,
 Plan-and-upgrade.contacts-or-companies,Contacts/Companies,
 campaign.reputation-alert,Due to low on Email reputation&#44; You can not send more than 1000 emails per day from Agile CRM. Please clean up your contact list.,,,
+landingpage-builder.feature,Feature,,,,,,,,,,,,,
+landingpage-builder.basic-block,Basic Block,,,,,,,,,,,,,
+landingpage-builder.call-to-action,Call to Action,,,,,,,,,,,,,
+landingpage-builder.testimonial,Testimonial,,,,,,,,,,,,,
+landingpage-builder.faqs,FAQs,,,,,,,,,,,,,
 Plan-and-upgrade.contacts-or-companies-limit-msg,Contacts/Companies with your current plan and are trying to subscribe with,,,,,,,,,,,,,
