i18 file updated for smtp

--- a/agile-frontend/WebContent/locales/csv/i18n.csv
+++ b/agile-frontend/WebContent/locales/csv/i18n.csv
@@ -6079,3 +6079,13 @@ landingpage-builder.call-to-action,Call to Action,,,,,,,,,,,,,
 landingpage-builder.testimonial,Testimonial,,,,,,,,,,,,,
 landingpage-builder.faqs,FAQs,,,,,,,,,,,,,
 Plan-and-upgrade.contacts-or-companies-limit-msg,Contacts/Companies with your current plan and are trying to subscribe with,,,,,,,,,,,,,
+smtp-bulk.per-day-limit,Per day limit,,,,,
+smtp-bulk.campaign-email,Send campaign emails from,,,
+smtp-bulk.note1,Send personal and campaign emails from your Gmail account.,,,,,,
+smtp-bulk.note2,The value for maximum number of emails to be sent from Agile via your Gmail account. If the per day max limit is reached&#44; then the emails will be sent from Agile’s default email gateway. Moreover the value should be less than or equal to with your Gmail sending limits. For more info on Gmail limits please check,,,,,,
+smtp-bulk.note3,If set to true&#44; the campaign and bulk emails will be sent through this Gmail account.,,,,
+smtp-bulk.bounces,Bounces and Spam Complaints will not be shown on Agile Reports.,,,,,
+smtp-bulk.note4,Maximum number of emails to be sent from Agile via your email provider. Check with your email provider on sending limits for your account. Some email providers may only allow you to send a limited number of emails per day or per hour.,,,
+smtp-bulk.note5,If set to true&#44; the campaign and bulk emails will be sent through email provider. If the per day max limit is reached&#44; then the emails will be sent from Agile’s default email gateway.,,,,
+smtp-bulk.note,Note,,,
+smtp-bulk.note6,Send personal and campaign emails from your email provider.,,,
